MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/Checkout_Payment_Attempt__c.object-meta.xml
<CustomObject>
    <description>One row per payment Checkout recorded against a Checkout Payment reference. A customer can try several cards on one link, and only the latest attempt survives on the payment itself, so the earlier ones are kept here for decline analysis.</description>
    <label>Checkout Payment Attempt</label>
    <nameField>
        <displayFormat>CPA-{00000}</displayFormat>
        <label>Checkout Payment Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Payment Attempts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>