MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when Checkout recorded the attempt as approved.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>