MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Attempted_On__c.field-meta.xml
<CustomField>
    <fullName>Attempted_On__c</fullName>
    <description>Checkout&apos;s requested_on for this attempt.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Attempted On</label>
    <type>DateTime</type>
</CustomField>