MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Card_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Card_Scheme__c</fullName>
    <description>Visa, Mastercard and so on.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Scheme</label>
    <length>40</length>
    <type>Text</type>
</CustomField>