MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Name__c</fullName>
    <description>Name as typed into the payment form. Worth comparing against the customer name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cardholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>