MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Checkout_Payment__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Payment__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The payment row this attempt belongs to.</description>
    <label>Checkout Payment</label>
    <referenceTo>Checkout_Payment__c</referenceTo>
    <relationshipLabel>Attempts</relationshipLabel>
    <relationshipName>Checkout_Payment_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>