MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <description>Bank that approved or refused the attempt.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>