MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Issuer_Country__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Country__c</fullName>
    <description>Two letter country of the issuing bank.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuer Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>