MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Id__c</fullName>
    <description>Checkout&apos;s pay_ id for this attempt. External id so re-polling a reference upserts rather than duplicating.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Payment Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>