MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <description>Issuer response code, for example 20059.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>