MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment_Attempt__c/fields/Three_DS_Challenged__c.field-meta.xml
<CustomField>
    <fullName>Three_DS_Challenged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the cardholder was challenged by 3D Secure on this attempt.</description>
    <label>3DS Challenged</label>
    <type>Checkbox</type>
</CustomField>